[package]
name = "wire-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
wire-stream = { path = "wire-stream" }
resp-wire = { path = "resp-wire" }
mongo-wire = { path = "mongo-wire" }
clickhouse-wire = { path = "clickhouse-wire" }
weaviate-wire = { path = "weaviate-wire" }
mysql-wire = { path = "mysql-wire" }
postgres-wire = { path = "postgres-wire" }
thiserror = { workspace = true }
memchr = { workspace = true }
elsa = { workspace = true }
byteorder = { workspace = true }
bson = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
pollster = "0.4"