[package]
name = "analytics_schema"
version = "0.1.0"
edition = "2024"
description = "ClickHouse analytics row types, table constants, and DDL for Eden"

[features]
default = []
llm = ["dep:llm-core"]

# Enables DiscoveryTemplateRow (requires pipeline-level types)
pipeline = []

[dependencies]
ch-push = { path = "../ch-push" }
chrono = { workspace = true }
clickhouse = { workspace = true }
eden-core = { path = "../../eden_core" }
llm-core = { path = "../../endpoint-core/llm-core", optional = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
