[package]
name = "block"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error = { path = "../error", default-features = false }
format = { path = "../format" }
node = { path = "../node", features = ["ed25519"] }
request = { path = "../request" }
eden_logger_internal = { workspace = true }
eden_logger = { workspace = true }
function_name = { workspace = true }
borsh = { workspace = true }
ed25519-dalek = { workspace = true }
rs_merkle = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[lints]
workspace = true
